# sifts

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile
src/sifts/: __init__.py  core.py
tests/: profiling_postgres.py  profiling_sqlite.py
tests/sifts/: test_core.py  test_postgres.py  test_queryparser.py  test_sqlite.py
